# black-hat-rust

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE.txt  README.md
ch_01/sha1_cracker/: Cargo.toml  README.md
ch_01/sha1_cracker/src/: main.rs
ch_01/snippets/enums/: Cargo.toml
ch_02/snippets/thread_error/: Cargo.toml
ch_02/snippets/threadpool/: Cargo.toml
ch_02/tricoder/: Cargo.toml  README.md
ch_02/tricoder/src/: api_helpers.rs  common_ports.rs  config.rs  error.rs  main.rs  model.rs  ports.rs  scanned_subdomain.rs  subdomains.rs  util.rs
ch_03/snippets/combinators/: Cargo.toml
ch_03/snippets/concurrent_stream/: Cargo.toml
ch_03/snippets/iterators/: Cargo.toml
ch_03/snippets/tokio_main/: Cargo.toml
ch_03/tricoder/: Cargo.toml  README.md
ch_03/tricoder/src/: common_ports.rs  main.rs  ports.rs  subdomains.rs
ch_04/phaser/: Cargo.toml  README.md  takeover_fingerprints.json
ch_04/phaser/src/: cli.rs  common_ports.rs  error.rs  main.rs  model.rs  ports.rs
ch_04/snippets/dispatch/: Cargo.toml
ch_04/snippets/logging/: Cargo.toml
ch_04/tricoder/: Cargo.toml  README.md
ch_04/tricoder/src/: cli.rs  common_ports.rs  dns.rs  error.rs  main.rs  model.rs  ports.rs
ch_04/tricoder/src/http/: mod.rs
ch_04/tricoder/src/modules/: mod.rs
ch_04/tricoder/src/modules/http/: cve_2018_7600.rs  directory_listing.rs  directory_listing_disclosure.rs  dotenv.rs  ds_store.rs  ds_store_disclosure.rs  elasticsearch_unauthenticated_access.rs  git_config_disclosure.rs  git_directory_disclosure.rs  gitlab_open_registrations.rs  mod.rs  traefik_dashboard_unauthenticated_access.rs
ch_04/tricoder/src/modules/subdomains/: crtsh.rs  mod.rs  web_archive.rs
ch_04/tricoder/src/subdomains/: mod.rs
ch_05/crawler/: Cargo.toml  README.md
ch_05/crawler/src/: crawler.rs  error.rs  main.rs
ch_05/crawler/src/processors/: mod.rs  print.rs
ch_05/crawler/src/spiders/: apple.rs  cvedetails.rs  github.rs  google.rs  mod.rs  quotes.rs
ch_05/snippets/atomic/: Cargo.toml
ch_06/fuzzing/: Cargo.toml  Makefile
ch_06/fuzzing/fuzz/: Cargo.toml
ch_06/fuzzing/src/: lib.rs
ch_07/bin_lib/: Cargo.toml
ch_07/bin_lib/src/: bin.rs  lib.rs
ch_07/exploits/: README.md
ch_07/exploits/cve_2019_11229/: Cargo.toml  exploit.py
ch_07/exploits/cve_2019_89242/: Cargo.toml  gd.jpg_original
ch_07/libc_exit/: Cargo.toml
ch_08/: .gitignore  Makefile  README.md  shellcode.ld
ch_08/executor/: Cargo.toml
ch_08/hello_world/: Cargo.toml
ch_08/reverse_tcp/: Cargo.toml
ch_08/shell/: Cargo.toml  shellcode.c
ch_09/dnsquat/: Cargo.toml  README.md
ch_09/emails/: Cargo.toml
ch_09/emails/src/: main.rs  ses.rs  smtp.rs  template.rs
ch_09/evil_twin/: .gitignore  Cargo.toml  README.md  dnsmasq.conf  evil_twin.sh  hostapd.conf
ch_09/phishing/: .gitignore  Cargo.toml  Makefile  README.md
ch_09/phishing/server/: Cargo.toml
ch_09/phishing/server/db/: 0001_init.sql
ch_09/phishing/server/src/: api.rs  db.rs  main.rs
ch_09/phishing/webapp/: Cargo.toml
ch_09/phishing/webapp/src/: error.rs  lib.rs
ch_09/phishing/webapp/src/components/: error_alert.rs  login_form.rs  mod.rs
ch_09/phishing/webapp/src/pages/: error.rs  login.rs  mod.rs
ch_09/phishing/webapp/src/services/: http_client.rs  mod.rs
ch_10/: Cargo.toml  Makefile  env.example
ch_10/agent/: Cargo.toml
ch_10/agent/src/: consts.rs  error.rs  init.rs  main.rs  run.rs
ch_10/client/: Cargo.toml
ch_10/client/src/: config.rs  error.rs  main.rs
ch_10/client/src/api/: get_job_result.rs  list_agents.rs  list_jobs.rs  mod.rs
ch_10/client/src/cli/: agents.rs  exec.rs  jobs.rs  list.rs  mod.rs  token.rs
ch_10/common/: Cargo.toml
ch_10/server/: Cargo.toml
ch_10/server/db/migrations/: 001_init.sql
ch_10/server/src/: config.rs  db.rs  entities.rs  error.rs  main.rs  model.rs  state.rs
ch_10/server/src/api/: error.rs  mod.rs  response.rs
ch_10/server/src/api/routes/: agents.rs  commands.rs  index.rs  jobs.rs  mod.rs
ch_10/server/src/repository/: agents.rs  jobs.rs  mod.rs
ch_10/server/src/routes/: commands.rs  mod.rs
ch_10/server/src/service/: agents.rs  create_job.rs  get_agent_job.rs  get_job.rs  get_job_result.rs  jobs.rs  list_agents.rs  mod.rs  register_agent.rs  update_job_result.rs
ch_11/: Dockerfile  Makefile  README.md  env.example
ch_11/agent/: Cargo.toml
ch_11/agent/src/: config.rs  consts.rs  error.rs  init.rs  main.rs  run.rs
ch_11/client/: Cargo.toml
ch_11/common/: Cargo.toml
ch_11/common/src/: api.rs  crypto.rs
ch_11/server/: Cargo.toml
ch_11/server/src/: config.rs  entities.rs  main.rs
ch_11/server/src/api/: state.rs
ch_11/server/src/api/routes/: agents.rs  jobs.rs  mod.rs
ch_11/server/src/repository/: agents.rs  jobs.rs
ch_11/server/src/service/: agents.rs  jobs.rs  mod.rs
ch_12/: Cargo.toml  Dockerfile  Makefile  README.md  env.example
ch_12/agent/: Cargo.toml
ch_12/docker/: Dockerfile.aarch64
ch_12/rat/: Dockerfile.agent  Makefile
ch_12/rat/agent/: Cargo.toml
ch_12/rat/agent/src/: config.rs  error.rs  main.rs
ch_12/rat/agent/src/install/: linux.rs  macos.rs  mod.rs
ch_12/rat/common/: Cargo.toml
ch_12/rat/common/src/: crypto.rs
ch_12/shellcode/: .gitignore  Dockerfile.aarch64  Dockerfile.armv7  Dockerfile.x86_64  Makefile  README.md
ch_13/: Cargo.toml  Dockerfile  Makefile  README.md  env.example
ch_13/agent/: Cargo.toml
ch_13/agent/src/: clean.rs  config.rs  error.rs  init.rs  install.rs  main.rs  run.rs  spread.rs  wordlist.rs
ch_13/agent/src/commands/: mod.rs
ch_13/agent/src/install/: linux.rs  windows.rs
ch_13/rat/: .gitignore  Makefile  README.md
ch_13/rat/agent/: Cargo.toml
ch_13/rat/agent/src/: config.rs  install.rs  main.rs  spread.rs
ch_13/server/: Cargo.toml
ch_14/: report.md
extra/backdoors/: README.md
extra/backdoors/num_cpu/: Cargo.toml  README.md
extra/backdoors/num_cpu/src/: lib.rs
extra/backdoors/tokio-backdoor/: Cargo.toml  README.md
extra/backdoors/tokio-backdoor/src/: lib.rs
extra/publishing/: Dockerfile  Makefile  README.md  epub.css  inline_code.tex  settings.txt  tango_theme.json
(+125 files in other folders)
