[package]
name = "agent"
version = "0.1.0"
authors = ["Sylvain Kerkour <sylvain@kerkour.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

ureq = { version = "2.1", features = ["tls", "json"] }
log = "0.4"
uuid = { version = "1", features = ["serde", "v4"] }
dirs = "4.0"
