[package]
name = "client"
version = "0.1.0"
authors = ["Sylvain Kerkour <sylvain@kerkour.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.13"
rand = "0.8"
