[package]
name = "client"
version = "0.1.0"
authors = ["Sylvain Kerkour <sylvain@kerkour.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

clap = { version = "3.1", features = ["cargo"] }
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.13"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }
uuid = { version = "1", features = ["serde", "v4"] }
prettytable-rs = "0.10"
