[package]
name = "server"
version = "0.1.0"
authors = ["Sylvain Kerkour <sylvain@kerkour.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version  = "0.4", features = ["serde"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "uuid", "json", "postgres", "migrate", "chrono", "time" ] }
tokio = { version = "1", features = ["full"] }
actix-web = { version = "4.0.0-beta.5", features = ["rustls"] }
env_logger = "0.8"
anyhow = "1.0"
