[package]
name = "common"
version = "0.1.0"
authors = ["Sylvain Kerkour <sylvain@kerkour.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde"] }
chrono = { version  = "0.4", features = ["serde"] }
