[package]
name = "agent"
version = "0.1.0"
authors = ["Sylvain Kerkour <sylvain@kerkour.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0"
ssh2 = { version = "0.9", features = ["vendored-openssl", "openssl-on-win32"] }

log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.7"
ed25519-dalek = "1"
x25519-dalek = "1"
base64 = "0.13"
blake2 = "0.9"
zeroize = "1.3"
single-instance = "0.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.10"
