[package]
name = "server"
version = "0.1.0"
authors = ["Sylvain Kerkour <sylvain@kerkour.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

actix-web = "3"
actix-files = "0.5"
env_logger = "0.8"
clap = "2"
log = "0.4"
sqlx = { version = "0.4", features = [ "runtime-actix-rustls", "sqlite", "chrono" ] }
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }