[package]
name = "agent"
version = "0.1.0"
authors = ["Sylvain Kerkour <sylvain@kerkour.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

log = "0.4"
uuid = { version = "1", features = ["serde", "v4"] }
dirs = "4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.7"
ed25519-dalek = "1"
x25519-dalek = "1"
base64 = "0.13"
single-instance = "0.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.10"
