[package]
name = "num_cpu"
version = "1.13.2"
edition = "2021"
description = "Get the number of CPUs on a machine."
license = "Apache-2.0"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
repository = "https://github.com/seanmonstar/num_cpus"
documentation = "https://docs.rs/num_cpu"
keywords = ["cpu", "cpus", "cores"]
categories = ["hardware-support"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
