[package]
name = "num_cpu"
version = "1.14.0"
edition = "2021"
description = "Get the number of CPUs on a machine."
license = "Apache-2.0"
repository = "https://github.com/skerkour/black-hat-rust"
documentation = "https://docs.rs/num_cpu"
keywords = ["cpu", "cpus", "cores"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
